--- a/images/common.css
+++ b/images/common.css
@@ -1,5 +1,10 @@
 @charset "utf-8";
-/* CSS Document */
+
+* {
+    margin: 0;
+    padding: 0;
+}
+
 body {
     font-family: 'simsun', Verdana, 'Lucida Grande', Arial, Helvetica, sans-serif;
     font-size: 12px;
@@ -11,11 +16,11 @@ body {
     background-size: 100% auto;
 }
 
-* {
-    margin: 0;
-    padding: 0;
-}
+/*
+    *** 播放页 ***
+*/
 
+/*  默认封面层  */
 .cover_bg {
     position: absolute;
     top: 50%;
@@ -28,12 +33,15 @@ body {
     background: url(coverbg.png) no-repeat;
     overflow: hidden;
 }
+
 .rotate {
     animation-name: rotate;
     animation-duration: 60s;
     animation-iteration-count: infinite;
     animation-timing-function: linear;
 }
+
+/*  播放器动画   */
 @keyframes rotate {
     from {
         transform: rotate(0deg);
@@ -43,6 +51,15 @@ body {
     }
 }
 
+/*  动态加载封面层 */
+.cover_pic {
+    width: 300px;
+    height: 300px;
+    background: none;
+    background-size: cover;
+}
+
+/*  歌词  */
 .lrc {
     line-height: 20px;
 
@@ -52,109 +69,15 @@ body {
     overflow: hidden;
     width: 300px;
     height: 20px;
-    margin-top: 155px;
+    margin-top: 200px;
     margin-left: -150px;
 
     text-align: center;
-
+    font-size: 150%;
     color: #fff;
 }
 
-.cover_pic {
-    width: 300px;
-    height: 300px;
-    background: none;
-    background-size: cover;
-}
-
-.homebtn {
-    position: absolute;
-    top: 15px;
-    right: 15px;
-
-    width: 30px;
-    height: 30px;
-
-    background: url(list.png) no-repeat;
-    background-size: 30px 30px;
-}
-
-.volbtn {
-    position: absolute;
-    top: 18px;
-    right: 70px;
-
-    width: 30px;
-    height: 30px;
-
-    background: url(vol.png) no-repeat no-repeat 0 9999px;
-    background-position: -2px -248px;
-}
-
-.vol {
-/ / visibility : hidden;
-    position: absolute;
-    right: 70px;
-    top: -110px;
-    width: 30px;
-    height: 110px;
-    background: #333333;
-    display: none;
-}
-
-.volbg {
-    position: absolute;
-    top: 15px;
-    left: 0;
-    right: 0;
-    margin: auto;
-    width: 10px;
-    height: 80px;
-    border-radius: 10px;
-    background-color: red;
-    overflow: hidden;
-}
-#voltime {
-    background-color:black;
-}
-.playbg {
-    float: right;
-    margin-top: -22px;
-    width: 400px;
-    height: 30px;
-    line-height: 30px;
-    font-size: 150%;
-}
-
-.progdiv {
-    width: 400px;
-    height: 9px;
-    margin-top: -25px;
-    margin-left: 300px;
-    border-radius: 10px;
-    background-color: #000;
-}
-
-.pgbg {
-    position: relative;
-    height: 10px;
-}
-
-.pgbuf,
-.pgtime {
-    position: absolute;
-    top: 0;
-    width: 0;
-    height: 10px;
-
-    border-radius: 10px;
-    background-color: #7D0606;
-}
-
-.pgtime {
-    background-color: #fff;
-}
-
+/*  歌曲控制按钮   */
 .btnsbar {
     width: 100%;
     height: 40px;
@@ -204,6 +127,103 @@ body {
     background: url(nextbtn.png);
     background-size: 32px 32px;
 }
+
+/*  播放条、缓存条 */
+.progdiv {
+    width: 400px;
+    height: 9px;
+    margin-top: -25px;
+    margin-left: 300px;
+    border-radius: 10px;
+    background-color: #000;
+}
+
+.pgbg {
+    position: relative;
+    height: 10px;
+}
+
+.pgbuf,
+.pgtime {
+    position: absolute;
+    top: 0;
+    width: 0;
+    height: 10px;
+
+    border-radius: 10px;
+    background-color: #7D0606;
+}
+
+.pgtime {
+    background-color: #fff;
+}
+
+/*  歌曲信息  */
+.playbg {
+    float: right;
+    margin-top: -22px;
+    width: 400px;
+    height: 30px;
+    line-height: 30px;
+    font-size: 150%;
+}
+
+/*  播放列表控件  */
+.homebtn {
+    position: absolute;
+    top: 15px;
+    right: 15px;
+
+    width: 30px;
+    height: 30px;
+
+    background: url(list.png) no-repeat;
+    background-size: 30px 30px;
+}
+
+/*  音量控制控件  */
+.volbtn {
+    position: absolute;
+    top: 18px;
+    right: 70px;
+
+    width: 30px;
+    height: 30px;
+
+    background: url(vol.png) no-repeat no-repeat 0 9999px;
+    background-position: -2px -248px;
+}
+
+.vol {
+    position: absolute;
+    right: 70px;
+    top: -110px;
+    width: 30px;
+    height: 110px;
+    background: #333333;
+    display: none;
+}
+
+.volbg {
+    position: absolute;
+    top: 15px;
+    left: 0;
+    right: 0;
+    margin: auto;
+    width: 10px;
+    height: 80px;
+    border-radius: 10px;
+    background-color: red;
+    overflow: hidden;
+}
+
+#voltime {
+    background-color: black;
+}
+
+/*
+    *** 列表页 ***
+*/
 
 header {
     line-height: 30px;
@@ -322,8 +342,6 @@ header span {
     padding: 10px 0;
 }
 
-
-
 .fmlistdiv span {
     color: #ccc;
 }
@@ -401,24 +419,28 @@ header span {
     color: #fff;
 }
 
+/*  media query */
 @media (max-width: 1100px) {
     .playbg {
         display: none;
     }
 }
+
 @media (max-width: 800px) {
-    .volbtn {
+    .volbtn, .homebtn {
         display: none;
     }
-    .homebtn {
-        display: none;
+    .vol {
+        display: none !important;   /*  添加！important标志以更改内联样式   */
     }
 }
+
 @media (max-width: 700px) {
     .progdiv {
         width: 200px;
     }
 }
+
 @media (max-width: 500px) {
     .progdiv {
         display: none;
