--- a/images/common.css
+++ b/images/common.css
@@ -5,10 +5,14 @@
     padding: 0;
 }
 
+html {
+    height: 100%;
+}
+
 body {
     font-family: 'simsun', Verdana, 'Lucida Grande', Arial, Helvetica, sans-serif;
     font-size: 12px;
-
+    height: 100%;
     margin: 0;
 
     background-color: #000;
@@ -19,16 +23,20 @@ body {
 /*
     *** 播放页 ***
 */
+.player {
+    height: 94%;
+}
 
 /*  默认封面层  */
 .cover_bg {
     position: absolute;
-    top: 50%;
-    left: 50%;
-    width: 300px;
-    height: 300px;
-    margin-top: -155px;
-    margin-left: -155px;
+    top: 0;
+    right: 0;
+    bottom: 0;
+    left: 0;
+    width: 310px;
+    height: 310px;
+    margin: auto;
     border-radius: 50%;
     background: url(coverbg.png) no-repeat;
     overflow: hidden;
@@ -51,40 +59,54 @@ body {
     }
 }
 
+/*  黑色边框    */
+.outer {
+    float: left;
+    width: 100%;
+    height: 100%;
+    background-color: #000000;
+}
+
 /*  动态加载封面层 */
 .cover_pic {
+    float: left;
     width: 300px;
     height: 300px;
     background: none;
     background-size: cover;
+    margin-left: -305px;
+    margin-top: 5px;
+    border-radius: 50%;
+
+    z-index: 1;
 }
 
 /*  歌词  */
 .lrc {
     line-height: 20px;
-
-    position: absolute;
-    top: 50%;
-    left: 50%;
-    overflow: hidden;
-    width: 300px;
-    height: 20px;
-    margin-top: 200px;
-    margin-left: -150px;
-
-    text-align: center;
     font-size: 150%;
     color: #fff;
+    text-align: center;
+
+    width: 300px;
+    height: 20px;
+
+    position: absolute;
+    bottom: 15%;
+    left: 50%;
+    overflow: hidden;
+    margin-left: -150px;
+
 }
 
 /*  歌曲控制按钮   */
 .btnsbar {
     width: 100%;
-    height: 40px;
+    height: 5%;
+    min-height: 30px;
     position: fixed;
     bottom: 0;
-    margin: 0 auto;
-    padding: 10px 0;
+    padding: 1% 0;
     background: #333;
     opacity: 0.7;
 }
@@ -131,8 +153,8 @@ body {
 /*  播放条、缓存条 */
 .progdiv {
     width: 400px;
-    height: 9px;
-    margin-top: -25px;
+    height: 10px;
+    margin-top: -28px;
     margin-left: 300px;
     border-radius: 10px;
     background-color: #000;
@@ -161,7 +183,7 @@ body {
 /*  歌曲信息  */
 .playbg {
     float: right;
-    margin-top: -22px;
+    margin-top: -24px;
     width: 400px;
     height: 30px;
     line-height: 30px;
@@ -181,11 +203,26 @@ body {
     background-size: 30px 30px;
 }
 
+.heartbtn {
+    position: absolute;
+    top: 15px;
+    right: 60px;
+    background: url(heart.png) no-repeat;
+    width: 30px;
+    height: 30px;
+    background-size: 30px 30px;
+}
+
+.heart_selected {
+    background: url(heart_selected.png) no-repeat;
+    background-size: 30px 30px;
+}
+
 /*  音量控制控件  */
 .volbtn {
     position: absolute;
     top: 18px;
-    right: 70px;
+    right: 105px;
 
     width: 30px;
     height: 30px;
@@ -196,7 +233,7 @@ body {
 
 .vol {
     position: absolute;
-    right: 70px;
+    right: 105px;
     top: -110px;
     width: 30px;
     height: 110px;
@@ -426,12 +463,13 @@ header span {
     }
 }
 
-@media (max-width: 800px) {
-    .volbtn, .homebtn {
+@media (max-width: 850px) {
+    .volbtn, .homebtn,.heartbtn {
         display: none;
     }
+
     .vol {
-        display: none !important;   /*  添加！important标志以更改内联样式   */
+        display: none !important; /*  添加！important标志以更改内联样式   */
     }
 }
 
@@ -444,5 +482,10 @@ header span {
 @media (max-width: 500px) {
     .progdiv {
         display: none;
+    }
+}
+@media (max-height: 500px) {
+    .lrc {
+        visibility: hidden;
     }
 }
