--- a/images/common.css
+++ b/images/common.css
@@ -7,6 +7,7 @@
 
 html {
     height: 100%;
+    overflow-y:hidden;  /* 隐藏滚动条 */
 }
 
 body {
@@ -88,14 +89,14 @@ body {
     color: #fff;
     text-align: center;
 
-    width: 300px;
+    width: 400px;
     height: 20px;
 
     position: absolute;
     bottom: 15%;
     left: 50%;
     overflow: hidden;
-    margin-left: -150px;
+    margin-left: -200px;
 
 }
 
