--- a/css/style.css
+++ b/css/style.css
@@ -17,7 +17,7 @@ body {
     margin: 0;
 
     background-color: #000;
-    background-image: url(bg0.jpg);
+    background-image: url(../images/bg0.jpg);
     background-size: 100% auto;
 }
 
@@ -39,7 +39,7 @@ body {
     height: 310px;
     margin: auto;
     border-radius: 50%;
-    background: url(coverbg.png) no-repeat;
+    background: url(../images/coverbg.png) no-repeat;
     overflow: hidden;
 }
 
@@ -128,7 +128,7 @@ body {
     height: 32px;
     margin-bottom: 4px;
 
-    background: url(prevbtn.png);
+    background: url(../images/prevbtn.png);
     background-size: 32px 32px;
 }
 
@@ -137,17 +137,17 @@ body {
     height: 40px;
     margin: 0 17px;
 
-    background: url(playbtn.png);
+    background: url(../images/playbtn.png);
     background-size: 40px 40px;
 }
 
 .pausebtn {
-    background: url(pausebtn.png);
+    background: url(../images/pausebtn.png);
     background-size: 40px 40px;
 }
 
 .nextbtn {
-    background: url(nextbtn.png);
+    background: url(../images/nextbtn.png);
     background-size: 32px 32px;
 }
 
@@ -200,7 +200,7 @@ body {
     width: 30px;
     height: 30px;
 
-    background: url(list.png) no-repeat;
+    background: url(../images/list.png) no-repeat;
     background-size: 30px 30px;
 }
 
@@ -208,14 +208,14 @@ body {
     position: absolute;
     top: 15px;
     right: 60px;
-    background: url(heart.png) no-repeat;
+    background: url(../images/heart.png) no-repeat;
     width: 30px;
     height: 30px;
     background-size: 30px 30px;
 }
 
 .heart_selected {
-    background: url(heart_selected.png) no-repeat;
+    background: url(../images/heart_selected.png) no-repeat;
     background-size: 30px 30px;
 }
 
@@ -228,7 +228,7 @@ body {
     width: 30px;
     height: 30px;
 
-    background: url(vol.png) no-repeat no-repeat 0 9999px;
+    background: url(../images/vol.png) no-repeat no-repeat 0 9999px;
     background-position: -2px -248px;
 }
 
@@ -274,7 +274,7 @@ header {
 
     text-align: center;
 
-    background: url(hdbg.png) repeat-x;
+    background: url(../images/hdbg.png) repeat-x;
 }
 
 header span {
@@ -289,7 +289,7 @@ header span {
     width: 30px;
     height: 30px;
 
-    background: url(listbtnb.png);
+    background: url(../images/listbtnb.png);
     background-size: 30px 30px;
 }
 .search {
@@ -332,7 +332,7 @@ input:focus {
     width: 100%;
     height: 100%;
 
-    background: url('bg.png') repeat;
+    background: url('../images/bg.png') repeat;
 }
 
 .fmlistdiv {
@@ -422,28 +422,28 @@ input:focus {
 .first_pg {
     width: 63px;
 
-    background: url(pg1.png) no-repeat;
+    background: url(../images/pg1.png) no-repeat;
     background-size: 65px 30px;
 }
 
 .end_pg {
     width: 63px;
 
-    background: url(pg4.png) no-repeat;
+    background: url(../images/pg4.png) no-repeat;
     background-size: 65px 30px;
 }
 
 .prev_pg {
     width: 30px;
 
-    background: url(pg2.png) no-repeat;
+    background: url(../images/pg2.png) no-repeat;
     background-size: 30px;
 }
 
 .next_pg {
     width: 30px;
 
-    background: url(pg3.png) no-repeat;
+    background: url(../images/pg3.png) no-repeat;
     background-size: 30px;
 }
 
